# cmake_tutorial

module1/: addition.cpp  divission.h  main.cpp  makefile
module2/: CMakeLists.txt  divission.cpp  print_result.cpp  print_result.h
module2/my_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
module3/my_math/: CMakeLists.txt
module3/my_math/include/my_math/: addition.h
module4/: CMakeLists.txt
module5/: CMakeLists.txt
module6/: CMakeLists.txt
module6/my_math/: CMakeLists.txt
module6/my_math/src/: addition.cpp
module7/: CMakeLists.txt  main.cpp
module7/my_math/: CMakeLists.txt
module7/my_math/src/: divission.cpp
module7/my_print/src/: print_result.cpp
test/: CMakeLists.txt  main.cpp
